Fixed sign up form

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -64,14 +64,14 @@
 
           <div class="top-row">
             <div class="field-wrap">
-              <label>
+							<label class="active">
                 First Name<span class="req">*</span>
               </label>
               <input type="text" required autocomplete="off" />
             </div>
 
             <div class="field-wrap">
-              <label>
+							<label class="active">
                 Last Name<span class="req">*</span>
               </label>
               <input type="text"required autocomplete="off"/>
@@ -79,14 +79,14 @@
           </div>
 
           <div class="field-wrap">
-            <label>
+						<label class="active">
               Email Address<span class="req">*</span>
             </label>
             <input type="email"required autocomplete="off"/>
           </div>
 
           <div class="field-wrap">
-            <label>
+						<label class="active">
               Set A Password<span class="req">*</span>
             </label>
             <input type="password"required autocomplete="off"/>
