--- a/public/css/login.css
+++ b/public/css/login.css
@@ -269,6 +269,7 @@ h1 {
   text-align: center;
   color: #ffffff;
   font-family: 'Titillium Web', sans-serif;
+  font-weight: 600;
   margin: 0 0 40px;
 }
 
