--- a/public/css/login.css
+++ b/public/css/login.css
@@ -270,6 +270,7 @@ h1 {
   color: #ffffff;
   font-family: 'Titillium Web', sans-serif;
   font-weight: 600;
+  font-size: 4em;
   margin: 0 0 40px;
 }
 
