--- a/public/css/login.css
+++ b/public/css/login.css
@@ -224,7 +224,7 @@ a:hover {
   background: rgba(19, 35, 47, 0.9);
   padding: 40px;
   max-width: 600px;
-  margin: 30% auto;
+  margin: 180px auto;
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
 }
 
