--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -29,16 +29,16 @@ a {
 }
 
 .navbar {
-	position: relative;;
+	position: fixed;
 	background: none;
-	margin-top: -1px;
+	/*margin-top: -1px;
 	margin-left: -1px;
-	border-radius: 0;
+	border-radius: 0;*/
 	top: 0;
 	left: 0;
 	bottom: 0;
 	right: 0;
-	width: 100.5%;
+	width: 100%;
 	height: 1em;
 	z-index: 999;
 }
