Fixing carousel images

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -39,7 +39,8 @@
 			{{#each pics}}
 		  <div class="carousel-item">
 				<a href="/places/{{id}}" >
-					<img class="carousel-img" src="{{name}}"></img>
+					<div class="carousel-img" style="background-image: url('{{name}}');"></div>
+					<!-- <img class="carousel-img" src="{{name}}"></img> -->
 				</a>
 			</div>
 			{{/each}}
