Fixing carousel images

--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -125,7 +125,12 @@ a {
 }
 
 .carousel-img {
-	width:250px;
 	height:250px;
+	overflow: hidden;
 	background-position:center;
+}
+
+.carousel-img img {
+    width: 250px;
+    height: 250px;
 }
