--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -39,8 +39,9 @@
 			{{#each pics}}
 		  <div class="carousel-item">
 				<a href="/places/{{id}}" >
-					<div class="carousel-img" style="background-image: url('{{name}}');"></div>
-					<!-- <img class="carousel-img" src="{{name}}"></img> -->
+					<div class="carousel-img" >
+						<img src="{{name}}"></img>
+					</div>
 				</a>
 			</div>
 			{{/each}}
