--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -55,6 +55,20 @@
           <input type="text" name="description" required autocomplete="off"/>
         </div>
 
+				<div class="field-wrap">
+					<label class="active">
+						Latitude <span class="req">*</span>
+					</label>
+					<input type="number" min="-90" max="+90" name="lat"  autocomplete="off"/>
+				</div>
+
+				<div class="field-wrap">
+          <label class="active">
+            Longitude <span class="req">*</span>
+          </label>
+          <input type="number" min="-180" max="180" name="lng"  autocomplete="off"/>
+        </div>
+
         <div class="field-wrap">
           <label class="active">
             Secludedness Rating (0 to 5) <span class="req">*</span>
