Added lat and lng to upload

--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -59,14 +59,14 @@
 					<label class="active">
 						Latitude <span class="req">*</span>
 					</label>
-					<input type="number" min="-90" max="+90" name="lat"  autocomplete="off"/>
+					<input type="number" min="-90" max="+90" name="lat" step=".00001" autocomplete="off"/>
 				</div>
 
 				<div class="field-wrap">
           <label class="active">
             Longitude <span class="req">*</span>
           </label>
-          <input type="number" min="-180" max="180" name="lng"  autocomplete="off"/>
+          <input type="number" min="-180" max="180" name="lng" step=".00001" autocomplete="off"/>
         </div>
 
         <div class="field-wrap">
