--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -57,14 +57,14 @@
 
 				<div class="field-wrap">
 					<label class="active">
-						Latitude <span class="req">*</span>
+						Latitude (Optional) <span class="req">*</span>
 					</label>
 					<input type="number" min="-90" max="+90" name="lat" step="0.000001" autocomplete="off"/>
 				</div>
 
 				<div class="field-wrap">
           <label class="active">
-            Longitude <span class="req">*</span>
+            Longitude (Optional) <span class="req">*</span>
           </label>
           <input type="number" min="-180" max="180" name="lng" step="0.000001" autocomplete="off"/>
         </div>
