--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -53,7 +53,7 @@ a {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #4CAF50;
+    background-color: #689F38;
 }
 
 .navbar ul .right{
@@ -62,7 +62,7 @@ a {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #4CAF50;
+    background-color: inherit;
 }
 
 .navbar li {
@@ -97,7 +97,7 @@ a {
 }
 
 .mat-btn {
-	background-color: #4CAF50;
+	background-color: #689F38;
 	color: white;
 	text-align: center;
   border-radius: 2px;
@@ -106,7 +106,6 @@ a {
   position: relative;
 	height: 50px;
 	line-height: 50px;
-  width: 80%;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
