--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
 	<title>GO!outide</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="theme-color" content="#4CAF50">
+	<meta name="theme-color" content="#689F38">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/gooutside.css" rel="stylesheet">
