--- a/public/css/login.css
+++ b/public/css/login.css
@@ -357,14 +357,14 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background: green;
+  background: #689F38;
   color: #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   -webkit-appearance: none;
 }
 .button:hover, .button:focus {
-  background: #006700;
+  background: #33691E;
 }
 
 .button-block {
