--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -33,7 +33,9 @@
 				<img src="{{image}}" />
 				<div class="list-place-name">{{name}}</div>
 			</a>
-				<div class="list-place-rating">Overall Rating: {{ratings.overall}}</div>
+			{{#stars ratings.overall}}
+				<span class="list-place-rating">{{this}}</div>
+			{{/stars}}
 		</div>
 		{{/each}}
 
@@ -42,5 +44,6 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="/js/stars.js"></script>
 </body>
 </html>
