--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -34,8 +34,7 @@
 				<div class="list-place-name">{{name}}</div>
 			</a>
 			<div class="list-place-rating">
-				{{#stars ratings.overall}}
-				{{/stars}}
+				{{{stars ratings.overall}}}
 			</div>
 		</div>
 		{{/each}}
