--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -34,7 +34,7 @@
 				<div class="list-place-name">{{name}}</div>
 			</a>
 			<div class="list-place-rating">
-				{{{stars ratings.overall}}}
+				{{stars ratings.overall}}
 			</div>
 		</div>
 		{{/each}}
@@ -44,6 +44,5 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script src="/js/stars.js"></script>
 </body>
 </html>
