--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -39,13 +39,13 @@
 			</div>
 
 			<div class="rating" />
-				Overall Rating: {{place.ratings.overall}}
+				Overall Rating: {{stars place.ratings.overall}}
 				<br>
-				Secludedness: {{place.ratings.secluded}}
+				Secludedness: {{stars place.ratings.secluded}}
 				<br>
-				Romanticness: {{place.ratings.romantic}}
+				Romanticness: {{stars place.ratings.romantic}}
 				<br>
-				Quietness: {{place.ratings.quiet}}
+				Quietness: {{stars place.ratings.quiet}}
 			</div>
 		</div>
 
