--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -38,15 +38,24 @@
 				{{place.description}}
 			</div>
 
-			<div class="rating" />
-				Overall Rating: {{stars place.ratings.overall}}
-				<br>
-				Secludedness: {{stars place.ratings.secluded}}
-				<br>
-				Romanticness: {{stars place.ratings.romantic}}
-				<br>
-				Quietness: {{stars place.ratings.quiet}}
-			</div>
+			<table class="ratings">
+				<tr>
+					<td>Overall</td>
+					<td>{{stars place.ratings.overall}}</td>
+				</tr>
+				<tr>
+					<td>Secludedness</td>
+					<td>{{stars place.ratings.secluded}}</td>
+				</tr>
+				<tr>
+					<td>Romanticness</td>
+					<td>{{stars place.ratings.romantic}}</td>
+				</tr>
+				<tr>
+					<td>Quietness</td>
+					<td>{{stars place.ratings.quiet}}</td>
+				</tr>
+			</table>
 		</div>
 
 	</div>
