--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -40,20 +40,20 @@
 
 			<table class="ratings">
 				<tr>
-					<td>Overall</td>
-					<td>{{stars place.ratings.overall}}</td>
+					<td class="criteria">Overall</td>
+					<td class="stars">{{stars place.ratings.overall}}</td>
 				</tr>
 				<tr>
-					<td>Secludedness</td>
-					<td>{{stars place.ratings.secluded}}</td>
+					<td class="criteria">Secludedness</td>
+					<td class="stars">{{stars place.ratings.secluded}}</td>
 				</tr>
 				<tr>
-					<td>Romanticness</td>
-					<td>{{stars place.ratings.romantic}}</td>
+					<td class="criteria">Romanticness</td>
+					<td class="stars">{{stars place.ratings.romantic}}</td>
 				</tr>
 				<tr>
-					<td>Quietness</td>
-					<td>{{stars place.ratings.quiet}}</td>
+					<td class="criteria">Quietness</td>
+					<td class="stars">{{stars place.ratings.quiet}}</td>
 				</tr>
 			</table>
 		</div>
