--- a/public/css/gooutside.css
+++ b/public/css/gooutside.css
@@ -13,26 +13,8 @@ a {
 	text-decoration: none;
 }
 
-.logo {
-	text-align: center;
-	position: absolute;
-	color: white;
-	font-size: 5em;
-	font-style: italic;
-	font-weight: bold;
-	left: 0;
-	top: 10%;
-	width: 100%;
-}
-
-.splashbuttons {
-	text-align: center;
-	position: absolute;
-	left: 0;
-	padding-left: 10%;
-	padding-right: 10%;
-	bottom: 5%;
-	width: 100%;
+.homepage {
+	padding-top: 1em;
 }
 
 .navbar {
