Open link in maps

--- a/views/place.handlebars
+++ b/views/place.handlebars
@@ -36,6 +36,7 @@
 
 			<div class="description">
 				{{place.description}}
+				<a href="http://maps.google.com/maps?q={{place.loc.lat}},{{place.loc.lng}}">Click here to open in maps</a>
 			</div>
 
 			<table class="ratings">
